# 2dGame

./: .gitignore  CMakeLists.txt
headers/: env.hpp  loop.hpp
headers/io/: key.hpp
headers/objects/: game_object.hpp  player.hpp
sources/: main.cpp
sources/io/: key.cpp
sources/objects/: player.cpp
